--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div id="game"></div>
+  <div id="bmmpGame"></div>
+
   <script src="js/phaser.js"></script>
 
   
@@ -18,7 +19,6 @@
   <script src="game/states/chooseStarSystem.js"></script>
   <script src="game/states/chooseStar.js"></script>
 
-  <script src="game/states/preload.js"></script>
   <script src="game/states/play.js"></script>
  
 	<script src="game/states/endScreen.js"></script>
