--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
 
   <script src="js/phaser.js"></script>
 
+  <!-- States -->
+		<script src="game/states/startScreen.js"></script>
+	  <script src="game/states/chooseAvatar.js"></script>
+	  <script src="game/states/loadingScreen.js"></script>
+	  <script src="game/states/chooseStarSystem.js"></script>
+	  <script src="game/states/chooseStar.js"></script>
+	  <script src="game/states/chooseStar.js"></script>
+	  <script src="game/states/play.js"></script>
+		<script src="game/states/endScreen.js"></script>
   
-	<script src="game/states/startScreen.js"></script>
-  <script src="game/states/chooseAvatar.js"></script>
-  <script src="game/states/loadingScreen.js"></script>
-  <script src="game/states/chooseStarSystem.js"></script>
-  <script src="game/states/chooseStar.js"></script>
-
-  <script src="game/states/play.js"></script>
- 
-	<script src="game/states/endScreen.js"></script>
-  
-
-  <script src="game/main.js"></script>
+  <!-- Components -->
+	  <script src="game/comp/starSystem.js"></script>
+	  <script src="game/comp/planet.js"></script>
+	  
+ <!-- Main -->
+	  <script src="game/main.js"></script>
 
 
 </body>
