added avatar, walkin, standing on tilemap

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <!-- Components -->
 	  <script src="game/comp/starSystem.js"></script>
 	  <script src="game/comp/planet.js"></script>
+	  <script src="game/comp/avatar.js"></script>
 	  
  <!-- Main -->
 	  <script src="game/main.js"></script>
