--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	  <script src="game/comp/starSystem.js"></script>
 	  <script src="game/comp/planet.js"></script>
 	  <script src="game/comp/avatar.js"></script>
+	  <script src="game/comp/collectable.js"></script>
+	    <script src="game/comp/coin.js"></script>
 	  
  <!-- Main -->
 	  <script src="game/main.js"></script>
