--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  <script src="game/comp/planet.js"></script>
 	  <script src="game/comp/avatar.js"></script>
 	  <script src="game/comp/collectable.js"></script>
-	    <script src="game/comp/coin.js"></script>
+		<script src="game/comp/enemy.js"></script>
 	  
  <!-- Main -->
 	  <script src="game/main.js"></script>
