--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	  <script src="game/states/chooseStarSystem.js"></script>
 	  <script src="game/states/chooseStar.js"></script>
 	  <script src="game/states/chooseStar.js"></script>
-	  <script src="game/states/play.js"></script>
+	  <script src="game/states/play_level1.js"></script>
+	  <script src="game/states/play_level2.js"></script>
+	  <script src="game/states/play_level3.js"></script>
 		<script src="game/states/endScreen.js"></script>
   
   <!-- Components -->
