--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
+
+ <link rel="stylesheet" type="text/css" href="css/style.css">
+
 <head>
   <title>Project</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+ 
 </head>
 <body>
-  <div id="bmmpGame"></div>
-
+  <div id="bmmpGame">
+  </div>
+   <div id="anleitung">
+   <img src="anleitung.png">
+   </div>
+	<div id="logo">
+   <img src="logo.jpg">
+   </div>
+   <div id="impressum">
+   <img src="impressum.png">
+   </div>
+ 
   <script src="js/phaser.js"></script>
 
   <!-- States -->
@@ -24,13 +37,13 @@
 	  <script src="game/states/play_level3.js"></script>
 		<script src="game/states/endScreen.js"></script>
   
-  <!-- Components -->
+  <!-- Components  -->
 	  <script src="game/comp/starSystem.js"></script>
 	  <script src="game/comp/planet.js"></script>
 	  <script src="game/comp/avatar.js"></script>
 	  <script src="game/comp/collectable.js"></script>
 		<script src="game/comp/enemy.js"></script>
-	  
+	 
  <!-- Main -->
 	  <script src="game/main.js"></script>
 
