--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <img src="anleitung.png">
    </div>
 	<div id="logo">
-   <img src="logo.jpg">
+   <!--<img src="logo.jpg">-->
    </div>
    <div id="impressum">
    <img src="impressum.png">
