--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <img src="anleitung.png">
    </div>
 	<div id="logo">
-   <!--<img src="logo.jpg">-->
+   <img src="logo.jpg">
    </div>
    <div id="impressum">
    <img src="impressum.png">
@@ -35,7 +35,10 @@
 	  <script src="game/states/play_level1.js"></script>
 	  <script src="game/states/play_level2.js"></script>
 	  <script src="game/states/play_level3.js"></script>
-		<script src="game/states/endScreen.js"></script>
+	<script src="game/states/endScreen.js"></script>
+		<script src="game/states/storyLevel1.js"></script>
+		<script src="game/states/storyLevel2.js"></script>
+		<script src="game/states/storyLevel3.js"></script>
   
   <!-- Components  -->
 	  <script src="game/comp/starSystem.js"></script>
