--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 		<script src="game/states/storyLevel1.js"></script>
 		<script src="game/states/storyLevel2.js"></script>
 		<script src="game/states/storyLevel3.js"></script>
+
+		<script src="game/states/instructionScreen.js"></script>
   
   <!-- Components  -->
 	  <script src="game/comp/starSystem.js"></script>
